@@ -1,0 +1,3 @@
+version="2.4.32"
+source="linux-${version}.tar.bz2"
+source_url="${KERNEL_URL}/pub/linux/kernel/v2.4/${source}"
