@@ -1,0 +1,6 @@
+appliedkernels="2.4.32"
+patchversion="${appliedkernels}-grsec"
+source="grsecurity-2.1.7-${appliedkernels}-200511131857.patch.gz"
+source_url="http://www.grsecurity.net/${source}"
+source_gpg="grsecurity.gpg:${source}.sign:ESTABLISHED_UPSTREAM_KEY"
+gpg_source_url="${source_url}.sign"
