@@ -2,16 +2,16 @@ LATEST_2_6=2.6.14
 LATEST_PRE_2_6=patch-2.6.15-rc2
 LATEST_maintenance_patches=patch-2.6.14.3
 LATEST_git_patches=patch-2.6.12-rc5-git8
-LATEST_2_4=2.4.31
+LATEST_2_4=2.4.32
 LATEST_PRE_2_4=patch-2.4.29
 LATEST_2_2=2.2.26
 LATEST_PRE_2_2=patch-2.2.27-pre2
 LATEST_2_0=2.0.40
 LATEST_mm_patches=2.6.15-rc2-mm1
 LATEST_ac_patches=patch-2.6.11-ac7
-LATEST_grsecurity_2_4=grsecurity-2.1.0-2.4.28-200501051112.patch
+LATEST_grsecurity_2_4=grsecurity-2.1.7-2.4.32-200511131857.patch
 LATEST_grsec_secfix_2_4=linux-2.4.28-secfix-200501071141.patch
-LATEST_grsecurity_2_6=grsecurity-2.1.7-2.6.14.2-200511150641.patch
+LATEST_grsecurity_2_6=grsecurity-2.1.7-2.6.14.3-200511261227.patch
 LATEST_grsec_secfix_2_6=linux-2.6.10-secfix-200501071130.patch
 LATEST_nitro_patches=patch-2.6.12-nitro5
 LATEST_ck_patches=patch-2.6.14-ck6
